Fix navbar visibility on light pages and correct Momenta tech badges

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -27,3 +27,22 @@ header.masthead {
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
 }
+
+// Make navbar visible on light pages (no hero masthead).
+// The clean-blog theme styled it as transparent w/ white text to overlay a hero.
+@media only screen and (min-width: 992px) {
+  #mainNav {
+    background-color: #fff;
+    border-bottom: 1px solid #e9ecef;
+
+    .navbar-brand,
+    .navbar-nav > li.nav-item > a {
+      color: #212529;
+
+      &:focus,
+      &:hover {
+        color: #0085A1;
+      }
+    }
+  }
+}
